# CoastSat-Provenance-LLM-Demo

./: .gitignore  CHANGELOG.md  README.md  README_LLM.md  README_TEMPLATE_DESCRIBE.md  summary.md
docs/: README.md
docs/development/: BUILD_AND_RUN.md  DEVELOPMENT_WORKFLOW.md  TEST_CHANGE.md  USING_LOCAL_BUILD.md  llm-file-attachments-plan.md  template_describe.md  workflow-detailed.md
docs/examples/: coastsat.md
docs/extension/: CURSOR_DEVELOPMENT.md  HOW_DEV_MODE_WORKS.md  IDE_DEVELOPMENT.md  VSCODE_EXTENSION.md
docs/getting-started/: QUICKSTART.md
docs/troubleshooting/: README.md
json/: InstructionAttachment.jsonld  InstructionBlock.jsonld  InstructionBlock.schema.json  Node.schema.json  context.jsonld
prompts/template_describe/livepublication/: data_lineage.smd  step_input.smd  step_output.smd  step_overview.smd  step_title.smd  template_describe_summary.smd  (+2 more)
rust/models-openai/: Cargo.toml
rust/node-execute/: Cargo.toml
schema/: InstructionAttachment.yaml  InstructionBlock.yaml
scripts/: build.sh  clean.sh  dev.sh  inject_prompt_transcripts.py  quick-dev.sh  replace_prompt_content.py  run-cli.sh  run-local.sh  setup.sh  start-dev.sh  test-node.sh  test-python.sh  test-rust.sh  test.sh  watch.sh
stencila/json/: InlinesBlock.jsonld  InstructionAttachment.schema.json  InstructionType.schema.json
test-files/: .gitignore  README.md  TEST_COMMANDS.md  compile_simple-article.sh
test-files/examples/: article-with-code.smd  simple-article.smd
test-files/inputs/: simple-article.json  simple-article.yaml
ts/src/: hydrate.ts  nodeType.ts
(+80 files in other folders)
