[package]
name = "models-openai"
version = "0.0.0"
edition = "2024"

[dependencies]
model = { path = "../model" }
async-openai = { version = "0.29.1", features = ["rustls"] }
cached = { workspace = true }
base64 = { workspace = true }
reqwest = { version = "0.12.5", default-features = false, features = ["json", "multipart", "rustls-tls"] }
serde = { workspace = true }

[lints]
workspace = true
